apps/copyparty/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: copyparty
  labels:
    goldilocks.fairwinds.com/enabled: "true"
