apps/copyparty/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  namespace: copyparty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: copyparty
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: copyparty
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: copyparty
          image: copyparty/ac:latest
          ports:
            - containerPort: 3923
          volumeMounts:
            - name: data
              mountPath: /w
            - name: config
              mountPath: /cfg
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: copyparty-data
        - name: config
          configMap:
            name: copyparty-config
